--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
+        "laravellegends/pt-br-validator": "^10.0",
         "php-flasher/flasher-laravel": "^1.15",
         "spatie/laravel-html": "^3.2",
         "spatie/laravel-permission": "^5.10"
