--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravellegends/pt-br-validator": "^10.0",
         "php-flasher/flasher-laravel": "^1.15",
         "spatie/laravel-html": "^3.2",
-        "spatie/laravel-permission": "^5.10"
+        "spatie/laravel-permission": "^5.10",
+        "tightenco/ziggy": "^1.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
