--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "laravel/laravel",
+    "name": "bulfaitelo/oslab",
     "type": "project",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "description": "OsLab",
+    "keywords": ["OsLab", "laravel", "Bulfaitelo"],
     "license": "MIT",
     "require": {
         "php": "^8.1",
