--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
         "fakerphp/faker": "^1.9.1",
+        "laradumps/laradumps": "^4.0",
         "laravel/pint": "^1.21",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
