--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravellegends/pt-br-validator": "^12.0",
         "livewire/livewire": "^3.4",
         "opcodesio/log-viewer": "^3.15",
+        "php-flasher/flasher-laravel": "^2.1",
         "spatie/laravel-backup": "^9.3",
         "spatie/laravel-html": "^3.2",
         "spatie/laravel-permission": "^6.00",
